--- a/components/navigation/NavBar.module.sass
+++ b/components/navigation/NavBar.module.sass
@@ -18,7 +18,7 @@
   @media screen and (min-width: $small)
     font-size: 115%
   @media screen and (min-width: $medium)
-    padding: 0 4rem
+    padding: 0 3rem
   @media screen and (min-width: $xlarge)
     font-size: 133%
   @media (prefers-color-scheme: dark)
@@ -47,7 +47,7 @@
 .navLink
   display: flex
   align-items: center
-  margin: 0 .75rem
+  margin: 0 .3rem
   padding: 0 .5rem
   height: 100%
   color: $gray-font
