--- a/components/projects/ProjectSection.module.sass
+++ b/components/projects/ProjectSection.module.sass
@@ -21,7 +21,8 @@
 
 .description
   padding: 1rem
-  max-width: 60rem
+  margin: auto
+  max-width: 45rem
   @media screen and (min-width: $medium)
     padding: 3rem
     padding-right: 1rem
